# dowse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  deny.toml  glama.json  server.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check_site.py
.github/workflows/: ci.yml  pages.yml  release.yml
.playwright-mcp/: page-2026-07-14T11-33-06-815Z.yml  page-2026-07-14T12-52-06-196Z.yml  page-2026-07-14T14-07-09-010Z.yml  page-2026-07-14T14-14-08-338Z.yml  page-2026-07-14T14-18-17-817Z.yml  page-2026-07-14T14-25-01-315Z.yml  page-2026-07-14T14-27-30-389Z.yml
crates/dowse/: Cargo.toml  README.md
crates/dowse-app/: package-lock.json  package.json
crates/dowse-app/src/: app.css  app.html
crates/dowse-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/dowse-app/src-tauri/capabilities/: default.json
crates/dowse-app/src-tauri/icons/: icon.icns
crates/dowse-app/src-tauri/src/: autohide.rs  commands.rs  config.rs  context_menu.rs  file_icons.rs  highlight.rs  i18n.rs  indexing_status.rs  lib.rs  logging.rs  main.rs  perf.rs  rebuild.rs  state.rs  tray.rs  watcher.rs  window_fx.rs
crates/dowse-app/src-tauri/windows/: path-hooks.nsh
crates/dowse-app/src/assets/fonts/: fonts.css
crates/dowse-app/src/lib/: api.ts  fileKind.ts  hotkey.ts  i18n.ts  pathTruncate.ts  searchHistory.ts  types.ts
crates/dowse-app/src/lib/components/: AnimatedNumber.svelte  EmptyState.svelte  FileIcon.svelte  GhostDropdown.svelte  IndexRulesPanel.svelte  IndexingStrip.svelte  PinButton.svelte  PreviewPane.svelte  ResultList.svelte  ResultRow.svelte  Segments.svelte  SettingsPanel.svelte  ShortcutBar.svelte  ShortcutOverlay.svelte
crates/dowse-app/src/routes/: +page.svelte
crates/dowse-cli/: Cargo.toml  README.md
crates/dowse-cli/src/: main.rs  mcp.rs
crates/dowse-cli/tests/: mcp_integration.rs
crates/dowse-core/: Cargo.toml  README.md
crates/dowse-core/src/: cursor.rs  events.rs  extract.rs  frn_table.rs  indexer.rs  lib.rs  meta.rs  mft.rs  ocr.rs  ocr_queue.rs  ocr_worker.rs  reconcile.rs  searcher.rs  status.rs  tokenizer.rs  updater.rs  usn.rs  usn_translate.rs  volume.rs  watch.rs
crates/dowse-core/tests/: e2e_watch.rs  incremental.rs  multi_root.rs  ntfs_fast_path.rs  ocr_pipeline.rs  office_extract.rs  reconcile.rs
crates/dowse-core/tests/common/: mod.rs
crates/dowse-core/tests/fixtures/: make_ocr_test_image.ps1
crates/dowse/src/: cursor.rs  events.rs  ext_groups.rs  extract.rs  indexer.rs  lib.rs  meta.rs  ocr.rs  ocr_worker.rs  query.rs  reconcile.rs  roots.rs  rules.rs  searcher.rs  status.rs  tokenizer.rs  updater.rs  usn_translate.rs  volume.rs  watch.rs
crates/dowse/tests/: e2e_watch.rs  incremental.rs  mcp_integration.rs  multi_root.rs  ntfs_fast_path.rs  ocr_pipeline.rs  office_extract.rs  reconcile.rs
crates/dowse/tests/common/: mod.rs
docs/: DESIGN-M2-浮窗.md  DESIGN-M3-增量索引.md  DESIGN-M4-OCR管线.md  DESIGN-M5-MCP.md  DESIGN-M6-NTFS快速层.md  DESIGN-M7-多根索引.md  DESIGN-UI-TOKENS.md  DESLOP-REPORT.md  SEO.md
mcpb/: manifest.json
site/: index.html  llms.txt  manifest.webmanifest  robots.txt  sitemap.xml
site/assets/: content.css  intro.js
site/en/: index.html
site/windows-file-content-search/: index.html
skill/: SKILL.md
