[workspace]
resolver = "2"
members = ["crates/dowse", "crates/dowse-app/src-tauri"]

# 发布到 crates.io 的公共元数据：各包用 `xxx.workspace = true` 继承，
# 只需在这里改一处就能同步 license/仓库地址/edition。
[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ltspace/dowse"
authors = ["ltspace"]

[workspace.dependencies]
anyhow = "1"

# 安装包预算 15MB（设计文档："超了就是 bug"）。默认 release profile 只优化速度
# 不管体积，实测裸 exe 就快 20MB 了——换成体积优先 + LTO + 去符号表，
# 拿一点点搜索延迟换体积，80ms 的搜索预算本来就宽裕，够花。
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
