[package]
name = "dowse"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Windows 本地文件极速全文搜索的命令行工具与 MCP 服务：tantivy + jieba 中文分词，支持增量索引与实时监听"
readme = "README.md"
keywords = ["search", "fulltext", "cli", "chinese", "mcp"]
categories = ["command-line-utilities", "text-processing"]

# docs.rs 默认在 Linux 构建，本工具主要面向 Windows；指定 Windows 目标构建文档。
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
directories = "6.0.0"
dowse-core = { version = "0.7.0", path = "../dowse-core" }
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
rmcp = { version = "2.2.0", features = ["client", "transport-child-process"] }
tempfile = "3.27.0"
