[package]
name = "dowse"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
directories = "6.0.0"
dowse-core = { version = "0.5.0", path = "../dowse-core" }
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
rmcp = { version = "2.2.0", features = ["client", "transport-child-process"] }
tempfile = "3.27.0"
