[package]
name = "dowse-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chardetng = "1.0.0"
encoding_rs = "0.8.35"
notify = "8.2.0"
pdf-extract = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.1"
tantivy-jieba = "0.20.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
