[package]
name = "dowse-core"
version = "0.6.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "本地文件全文搜索引擎核心库：tantivy 倒排索引 + jieba 中文分词，含编码探测、NTFS/USN 快速索引与 Windows OCR"
readme = "README.md"
keywords = ["search", "fulltext", "chinese", "tantivy", "jieba"]
categories = ["text-processing", "filesystem"]

[dependencies]
anyhow.workspace = true
chardetng = "1.0.0"
encoding_rs = "0.8.35"
notify = "8.2.0"
pdf-extract = "0.12.0"
quick-xml = "0.37.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.1"
tantivy-jieba = "0.20.0"
walkdir = "2.5.0"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"

# OCR 管线只在 Windows 上跑（Windows.Media.Ocr 是系统自带 API），target 限定的依赖块
# 让非 Windows 平台上 cargo check 完全不用拉这几个包——ocr.rs 里对应代码也用
# #[cfg(windows)] 隔开，非 Windows 走一个"不可用"的桩实现。
#
# 里程碑 6 追加的 Win32_* 几个 feature 是 NTFS 快速层用的：打开卷句柄、查/读
# USN Journal、FSCTL_ENUM_USN_DATA 枚举 MFT——同样只在 volume.rs/mft.rs/usn.rs
# 里 #[cfg(windows)] 的分支用到，非 Windows 平台一样不用拉。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage", "Storage_Streams", "Foundation", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Security"] }
windows-future = "0.3"
pollster = "0.4"
