[package]
name = "dowse-core"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
chardetng = "1.0.0"
encoding_rs = "0.8.35"
notify = "8.2.0"
pdf-extract = "0.12.0"
quick-xml = "0.37.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.1"
tantivy-jieba = "0.20.0"
walkdir = "2.5.0"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"

# OCR 管线只在 Windows 上跑（Windows.Media.Ocr 是系统自带 API），target 限定的依赖块
# 让非 Windows 平台上 cargo check 完全不用拉这几个包——ocr.rs 里对应代码也用
# #[cfg(windows)] 隔开，非 Windows 走一个"不可用"的桩实现。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Media_Ocr", "Globalization", "Graphics_Imaging", "Storage", "Storage_Streams", "Foundation", "Foundation_Collections"] }
windows-future = "0.3"
pollster = "0.4"
