[package]
name = "dowse-app"
version = "0.8.2"
description = "dowse desktop overlay: glass search palette for Windows"
authors.workspace = true
edition = "2024"
rust-version.workspace = true
# GUI 应用不发布到 crates.io（走 GitHub Releases 分发安装包），显式禁止误发。
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dowse_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
directories = "6.0.0"
dowse = { path = "../../dowse", default-features = false }
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Registry", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_Globalization"] }
png = "0.18.1"

